[gd_scene load_steps=5 format=3 uid="uid://oavtintayebl"]

[ext_resource type="Script" path="res://Scenes/Asteroids/Medium Asteroid/Medium_asteroid.gd" id="1_3563y"]
[ext_resource type="Texture2D" uid="uid://dbef6aicystk0" path="res://Sprites/Asteroids/Medium_Asteroid-2.png-1.png.png" id="2_j5l1u"]
[ext_resource type="Texture2D" uid="uid://tloen5r7y7t4" path="res://Sprites/Asteroids/Medium_Crack1-1.png-1.png.png" id="3_v7v16"]
[ext_resource type="Texture2D" uid="uid://kbfw3tklnc87" path="res://Sprites/Asteroids/Medium_Crack2-2.png-1.png.png" id="4_bl0vw"]

[node name="Medium_Asteroid" type="Area2D" groups=["Enemy"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3563y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_j5l1u")

[node name="Crack1" type="Sprite2D" parent="Sprite2D"]
visible = false
texture_filter = 1
texture = ExtResource("3_v7v16")

[node name="Crack2" type="Sprite2D" parent="Sprite2D"]
visible = false
texture_filter = 1
texture = ExtResource("4_bl0vw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(4, -40, 14, -40, 31, -29, 41, -17, 41, -1, 35, 4, 36, 11, 37, 20, 32, 28, 31, 33, 12, 33, 7, 35, -3, 30, -17, 27, -28, 23, -33, 15, -31, 4, -31, -7, -22, -20, -19, -22, -18, -28, -6, -37, -2, -39)
